@@ -1,15 +1,23 @@
 package com.czertainly.core.security.authn.client;
 
+import com.czertainly.api.model.core.logging.enums.*;
+import com.czertainly.api.model.core.settings.SettingsSection;
+import com.czertainly.api.model.core.settings.authentication.AuthenticationSettingsDto;
+import com.czertainly.core.logging.LoggingHelper;
 import com.czertainly.core.model.auth.AuthenticationRequestDto;
 import com.czertainly.core.security.authn.CzertainlyAuthenticationException;
 import com.czertainly.core.security.authn.client.dto.AuthenticationResponseDto;
 import com.czertainly.core.security.authn.client.dto.UserDetailsDto;
+import com.czertainly.core.security.exception.AuthenticationServiceException;
+import com.czertainly.core.service.AuditLogService;
+import com.czertainly.core.settings.SettingsCache;
 import com.czertainly.core.util.AuthHelper;
 import com.czertainly.core.util.CertificateUtil;
+import com.czertainly.core.util.OAuth2Constants;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
@@ -18,10 +26,11 @@ import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.reactive.function.client.WebClientRequestException;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Mono;
 
-import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -29,7 +38,7 @@ import java.util.stream.Collectors;
 @Component
 public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthenticationClient {
 
-    protected final Log logger = LogFactory.getLog(this.getClass());
+    protected final Logger logger = LoggerFactory.getLogger(this.getClass());
 
     private final ObjectMapper objectMapper;
     private final String customAuthServiceBaseUrl;
@@ -37,29 +46,33 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
     @Value("${server.ssl.certificate-header-name}")
     private String certificateHeaderName;
 
-    @Value("${auth.token.header-name}")
-    private String authTokenHeaderName;
+    private final AuditLogService auditLogService;
 
-    public CzertainlyAuthenticationClient(@Autowired ObjectMapper objectMapper, @Value("${auth-service.base-url}") String customAuthServiceBaseUrl) {
-
+    public CzertainlyAuthenticationClient(@Autowired AuditLogService auditLogService, @Autowired ObjectMapper objectMapper, @Value("${auth-service.base-url}") String customAuthServiceBaseUrl) {
         this.objectMapper = objectMapper;
+        this.auditLogService = auditLogService;
         this.customAuthServiceBaseUrl = customAuthServiceBaseUrl;
     }
 
-    public AuthenticationInfo authenticate(HttpHeaders headers) throws AuthenticationException {
+    public AuthenticationInfo authenticate(HttpHeaders headers, boolean isLocalhostRequest) throws AuthenticationException {
+        if (logger.isTraceEnabled()) {
+            logger.trace("Calling authentication service with the following headers [{}].", headers.entrySet().stream()
+                    .map(e -> String.format("%s='%s'", e.getKey(), String.join(", ", e.getValue())))
+                    .collect(Collectors.joining(",")));
+        }
+
+        AuthenticationRequestDto authRequest = getAuthPayload(headers, isLocalhostRequest);
+        if (logger.isDebugEnabled()) {
+            ActorType actorType = LoggingHelper.getActorType();
+            logger.debug("Going to authenticate {}user with {} auth method. {}", actorType == null || actorType == ActorType.USER ? "" : actorType.getLabel() + " ", authRequest.getAuthMethod().getLabel(), authRequest.getAuthData(true));
+        }
+
         try {
-            logger.trace(
-                    String.format(
-                            "Calling authentication service with the following headers [%s].",
-                            headers.entrySet().stream()
-                                    .map(e -> String.format("%s='%s'", e.getKey(), String.join(", ", e.getValue())))
-                                    .collect(Collectors.joining(","))
-                    )
-            );
+
             WebClient.RequestHeadersSpec<?> request = getClient(customAuthServiceBaseUrl)
                     .post()
                     .uri("/auth")
-                    .body(Mono.just(getAuthPayload(headers)), AuthenticationRequestDto.class)
+                    .body(Mono.just(authRequest), AuthenticationRequestDto.class)
                     .accept(MediaType.APPLICATION_JSON);
 
             AuthenticationResponseDto response = request
@@ -68,52 +81,98 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
                     .block();
 
             if (response == null) {
-                throw new CzertainlyAuthenticationException("Empty response received from authentication service.");
+                String message = "Empty response received from authentication service";
+                AuthHelper.logAndAuditAuthFailure(logger, auditLogService, message, authRequest.getAuthData(false));
+                throw new CzertainlyAuthenticationException(message);
             }
-            return createAuthenticationInfo(response);
-        } catch (WebClientResponseException.InternalServerError e) {
-            throw new CzertainlyAuthenticationException("An error occurred when calling authentication service.", e);
+            return createAuthenticationInfo(authRequest.getAuthMethod(), response);
+        } catch (WebClientResponseException.InternalServerError | WebClientRequestException e) {
+            String message = "An error occurred when calling authentication service: " + e.getMessage();
+            AuthHelper.logAndAuditAuthFailure(logger, auditLogService, message, authRequest.getAuthData(false));
+            throw new CzertainlyAuthenticationException(message, e);
+        } catch (AuthenticationServiceException e) {
+            AuthHelper.logAndAuditAuthFailure(logger, auditLogService, e.getException().getMessage(), authRequest.getAuthData(false));
+            throw new CzertainlyAuthenticationException(e.getException().getMessage(), e);
         }
     }
 
-    private AuthenticationRequestDto getAuthPayload(HttpHeaders headers) {
+    private AuthenticationRequestDto getAuthPayload(HttpHeaders headers, boolean isLocalhostRequest) {
+        boolean hasAuthenticationMethod = false;
         AuthenticationRequestDto requestDto = new AuthenticationRequestDto();
+        requestDto.setAuthMethod(AuthMethod.NONE);
         final List<String> certificateHeaderNameList = headers.get(certificateHeaderName);
-        if( certificateHeaderNameList != null) {
-            try {
-                String certificateInHeader = java.net.URLDecoder.decode(certificateHeaderNameList.get(0), StandardCharsets.UTF_8.name());
-                requestDto.setCertificateContent(CertificateUtil.normalizeCertificateContent(certificateInHeader));
-            } catch (UnsupportedEncodingException e) {
-                logger.debug("Header not URL encoded");
-                requestDto.setCertificateContent(certificateHeaderNameList.get(0));
-            }
+        if (certificateHeaderNameList != null) {
+            hasAuthenticationMethod = true;
+            String certificateInHeader = URLDecoder.decode(certificateHeaderNameList.getFirst(), StandardCharsets.UTF_8);
+            requestDto.setAuthMethod(AuthMethod.CERTIFICATE);
+            requestDto.setCertificateContent(CertificateUtil.normalizeCertificateContent(certificateInHeader));
         }
 
-        final List<String> authTokenHeaderNameList = headers.get(authTokenHeaderName);
-        if(authTokenHeaderNameList != null) {
-            requestDto.setAuthenticationToken(authTokenHeaderNameList.get(0));
+        final List<String> authTokenHeaderNameList = headers.get(OAuth2Constants.TOKEN_AUTHENTICATION_HEADER);
+        if (authTokenHeaderNameList != null) {
+            hasAuthenticationMethod = true;
+            requestDto.setAuthenticationToken(authTokenHeaderNameList.getFirst());
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.TOKEN);
+            }
         }
 
         final List<String> systemUserHeaderNameList = headers.get(AuthHelper.SYSTEM_USER_HEADER_NAME);
-        if(systemUserHeaderNameList != null){
-            requestDto.setSystemUsername(systemUserHeaderNameList.get(0));
+        if (systemUserHeaderNameList != null) {
+            hasAuthenticationMethod = true;
+            requestDto.setSystemUsername(systemUserHeaderNameList.getFirst());
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.USER_PROXY);
+            }
         }
 
         final List<String> userUuidHeaderNameList = headers.get(AuthHelper.USER_UUID_HEADER_NAME);
-        if(userUuidHeaderNameList != null){
-            requestDto.setUserUuid(userUuidHeaderNameList.get(0));
+        if (userUuidHeaderNameList != null) {
+            hasAuthenticationMethod = true;
+            requestDto.setUserUuid(userUuidHeaderNameList.getFirst());
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.USER_PROXY);
+            }
         }
+
+        if (!hasAuthenticationMethod && isLocalhostRequest) {
+            checkLocalhostUser(requestDto);
+        }
+
+        // update MDC for actor logging before authentication
+        LoggingHelper.putActorInfoWhenNull(ActorType.USER, requestDto.getAuthMethod());
+
         return requestDto;
     }
 
-    private AuthenticationInfo createAuthenticationInfo(AuthenticationResponseDto response) {
+    private void checkLocalhostUser(AuthenticationRequestDto requestDto) {
+        AuthenticationSettingsDto authenticationSettings = SettingsCache.getSettings(SettingsSection.AUTHENTICATION);
+        if (!authenticationSettings.isDisableLocalhostUser()) {
+            requestDto.setSystemUsername(AuthHelper.LOCALHOST_USERNAME);
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.USER_PROXY);
+            }
+        }
+    }
+
+    private AuthenticationInfo createAuthenticationInfo(AuthMethod authMethod, AuthenticationResponseDto response) {
         if (!response.isAuthenticated()) {
-            return AuthenticationInfo.getAnonymousAuthenticationInfo();
+            AuthenticationInfo anonymousUserDetails = AuthenticationInfo.getAnonymousAuthenticationInfo();
+
+            // update MDC for actor logging after successful authentication
+            LoggingHelper.putActorInfoWhenNull(ActorType.ANONYMOUS, null, anonymousUserDetails.getUsername());
+
+            return anonymousUserDetails;
         }
 
         try {
             UserDetailsDto userDetails = objectMapper.readValue(response.getData(), UserDetailsDto.class);
+
+            // update MDC for actor logging after successful authentication
+            LoggingHelper.putActorInfoWhenNull(ActorType.USER, userDetails.getUser().getUuid(), userDetails.getUser().getUsername());
+
             return new AuthenticationInfo(
+                    authMethod,
                     userDetails.getUser().getUuid(),
                     userDetails.getUser().getUsername(),
                     userDetails.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList()),
@@ -123,4 +182,5 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
             throw new CzertainlyAuthenticationException("The response from the authentication service could not be parsed.", e);
         }
     }
+
 }
