@@ -8,8 +8,6 @@ import com.czertainly.api.model.common.attribute.v2.DataAttribute;
 import com.czertainly.api.model.connector.notification.NotificationProviderInstanceDto;
 import com.czertainly.api.model.connector.notification.NotificationProviderInstanceRequestDto;
 import com.czertainly.api.model.connector.notification.NotificationType;
-import com.czertainly.api.model.core.audit.ObjectType;
-import com.czertainly.api.model.core.audit.OperationType;
 import com.czertainly.api.model.core.auth.Resource;
 import com.czertainly.api.model.core.connector.FunctionGroupCode;
 import com.czertainly.api.model.core.notification.AttributeMappingDto;
@@ -17,7 +15,7 @@ import com.czertainly.api.model.core.notification.NotificationInstanceDto;
 import com.czertainly.api.model.core.notification.NotificationInstanceRequestDto;
 import com.czertainly.api.model.core.notification.NotificationInstanceUpdateRequestDto;
 import com.czertainly.api.model.core.settings.NotificationSettingsDto;
-import com.czertainly.core.aop.AuditLogged;
+import com.czertainly.api.model.core.settings.SettingsSection;
 import com.czertainly.core.attribute.engine.AttributeEngine;
 import com.czertainly.core.dao.entity.Connector;
 import com.czertainly.core.dao.entity.NotificationInstanceMappedAttributes;
@@ -31,6 +29,7 @@ import com.czertainly.core.service.ConnectorService;
 import com.czertainly.core.service.CredentialService;
 import com.czertainly.core.service.NotificationInstanceService;
 import com.czertainly.core.service.SettingService;
+import com.czertainly.core.settings.SettingsCache;
 import com.czertainly.core.util.AttributeDefinitionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -40,7 +39,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -91,17 +89,14 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
     }
 
     @Override
-    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.NOTIFICATION_INSTANCE, operation = OperationType.REQUEST)
     @ExternalAuthorization(resource = Resource.NOTIFICATION_INSTANCE, action = ResourceAction.LIST)
     public List<NotificationInstanceDto> listNotificationInstances() {
         return notificationInstanceReferenceRepository.findAll()
                 .stream()
-                .map(NotificationInstanceReference::mapToDto)
-                .collect(Collectors.toList());
+                .map(NotificationInstanceReference::mapToDto).toList();
     }
 
     @Override
-    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.NOTIFICATION_INSTANCE, operation = OperationType.REQUEST)
     @ExternalAuthorization(resource = Resource.NOTIFICATION_INSTANCE, action = ResourceAction.DETAIL)
     public NotificationInstanceDto getNotificationInstance(UUID uuid) throws ConnectorException {
         NotificationInstanceReference notificationInstanceReference = getNotificationInstanceReferenceEntity(uuid);
@@ -111,8 +106,7 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
         NotificationInstanceDto notificationInstanceDto = notificationInstanceReference.mapToDto();
         notificationInstanceDto.setAttributeMappings(notificationInstanceReference.getMappedAttributes()
                 .stream()
-                .map(NotificationInstanceMappedAttributes::mapToDto)
-                .collect(Collectors.toList()));
+                .map(NotificationInstanceMappedAttributes::mapToDto).toList());
 
         if (notificationInstanceReference.getConnector() == null) {
             notificationInstanceDto.setConnectorName(notificationInstanceReference.getConnectorName() + " (Deleted)");
@@ -142,7 +136,6 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
     }
 
     @Override
-    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.NOTIFICATION_INSTANCE, operation = OperationType.CREATE)
     @ExternalAuthorization(resource = Resource.NOTIFICATION_INSTANCE, action = ResourceAction.CREATE)
     public NotificationInstanceDto createNotificationInstance(NotificationInstanceRequestDto request) throws AlreadyExistException, ConnectorException, AttributeException {
         if (notificationInstanceReferenceRepository.findByName(request.getName()).isPresent()) {
@@ -177,7 +170,6 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
     }
 
     @Override
-    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.NOTIFICATION_INSTANCE, operation = OperationType.CHANGE)
     @ExternalAuthorization(resource = Resource.NOTIFICATION_INSTANCE, action = ResourceAction.UPDATE)
     public NotificationInstanceDto editNotificationInstance(UUID uuid, NotificationInstanceUpdateRequestDto request) throws ConnectorException, AttributeException {
         NotificationInstanceReference notificationInstanceRef = getNotificationInstanceReferenceEntity(uuid);
@@ -205,7 +197,6 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
     }
 
     @Override
-    @AuditLogged(originator = ObjectType.FE, affected = ObjectType.NOTIFICATION_INSTANCE, operation = OperationType.DELETE)
     @ExternalAuthorization(resource = Resource.NOTIFICATION_INSTANCE, action = ResourceAction.DELETE)
     public void deleteNotificationInstance(UUID uuid) throws ConnectorException {
         NotificationInstanceReference notificationInstanceRef = getNotificationInstanceReferenceEntity(uuid);
@@ -249,7 +240,7 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
             mappedAttribute.setMappingAttributeUuid(UUID.fromString(attributeMappingDto.getMappingAttributeUuid()));
             mappedAttribute.setMappingAttributeName(attributeMappingDto.getMappingAttributeName());
             return mappedAttribute;
-        }).collect(Collectors.toList()));
+        }).toList());
     }
 
     private void removeNotificationInstance(NotificationInstanceReference notificationInstanceRef) throws ValidationException {
@@ -260,8 +251,7 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
             } catch (NotFoundException notFoundException) {
                 logger.warn("Notification is already deleted in the connector. Proceeding to remove it from the core");
             } catch (Exception e) {
-                logger.error(e.getMessage());
-                throw new ValidationException(e.getMessage());
+                throw new ValidationException("Error in delete of notification instance: " + e.getMessage());
             }
         } else {
             logger.debug("Deleting notification without connector: {}", notificationInstanceRef);
@@ -269,7 +259,7 @@ public class NotificationInstanceServiceImpl implements NotificationInstanceServ
         notificationInstanceReferenceRepository.delete(notificationInstanceRef);
 
         // check notifications settings and remove deleted instance if used
-        NotificationSettingsDto notificationsSettings = settingService.getNotificationSettings();
+        NotificationSettingsDto notificationsSettings = SettingsCache.getSettings(SettingsSection.NOTIFICATIONS);
         if (notificationsSettings != null) {
             boolean updated = false;
             for (NotificationType notificationType : NotificationType.values()) {
